# primeira-api

./: main.py  pyproject.toml
.github/workflows/: develop.yaml
tests/: conftest.py  test_main.py
