[tool.poetry]
name = "primeira-api"
version = "0.1.0"
description = ""
authors = ["GabrielCarvalho <gabrielcarvalho.workk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.7"}
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.4"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
